unpackaged/main/default/objects/Lead/fields/Time_to_call__c.field-meta.xml
<CustomField>
    <fullName>Time_to_call__c</fullName>
    <formula>ROUND(( First_Call_Date__c - Rep_Assigned_Date__c ) * 24, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to call</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>