unpackaged/main/default/objects/Lead/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <type>Phone</type>
</CustomField>