unpackaged/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing to High</fullName>
            </value>
            <value>
                <fullName>Not Ready Now</fullName>
            </value>
            <value>
                <fullName>Black Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>