unpackaged/main/default/objects/Lead/fields/X2024_Partnership_Presentations_Webinars__c.field-meta.xml
<CustomField>
    <fullName>X2024_Partnership_Presentations_Webinars__c</fullName>
    <label>Partnership Presentations/Webinars</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X2024_Partnership_Presentations_Webinars</valueSetName>
    </valueSet>
</CustomField>