unpackaged/main/default/objects/Lead/fields/Your_Current_Website_Optional__c.field-meta.xml
<CustomField>
    <fullName>Your_Current_Website_Optional__c</fullName>
    <label>Your Current Website (Optional)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>