unpackaged/main/default/objects/Lead/fields/Zipcode_score__c.field-meta.xml
<CustomField>
    <fullName>Zipcode_score__c</fullName>
    <label>(MLS) Zipcode score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>