unpackaged/main/default/objects/Lead/validationRules/Industry_Contact_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Contact_Owner</fullName>
    <active>true</active>
    <description>If a lead has the field Industry Contact set to true, it can only be owned by Drew or JP.</description>
    <errorConditionFormula>AND(
Industry_Contact__c = true,
Owner:User.CommunityNickname &lt;&gt; &quot;Drew Wilke&quot;,
Owner:User.CommunityNickname &lt;&gt; &quot;JP Descheneaux&quot;
)</errorConditionFormula>
    <errorMessage>if a lead has the field Industry Contact set to true, it can only be owned by Drew or JP.Lead can only be owned by certain users, please contact your system admin</errorMessage>
</ValidationRule>