unpackaged/main/default/objects/Lead/validationRules/Lead_is_Ready.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_is_Ready</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( $User.Id = &#39;005EY000000HgBC&#39;),
 NOT ( $UserRole.DeveloperName = &#39;Hubspot&#39;),

 NOT (  $Profile.Name = &#39;System Administrator&#39;),
 ISPICKVAL( Status,&quot;Ready&quot;),
 OR(
  ISPICKVAL(  LeadSource , &quot;&quot;), 
  ISBLANK( FirstName )
    )
)</errorConditionFormula>
    <errorMessage>Please, complete the following fields to move the Lead to Ready: Lead Source and First Name.</errorMessage>
</ValidationRule>