unpackaged/main/default/objects/Lead/validationRules/Owner_JP.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_JP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
NOT( $Profile.Name = &quot;System Administrator&quot;),
NOT ( $UserRole.DeveloperName = &#39;Hubspot&#39;),
$User.Username &lt;&gt; &quot;edayal@luxurypresence.com&quot;,

PRIORVALUE( OwnerId )= &quot;005Rg000004H0m5IAC&quot; 

)</errorConditionFormula>
    <errorMessage>You do not have permission to modify the owner, please contact your System Admin.</errorMessage>
</ValidationRule>