unpackaged/main/default/objects/Lead/validationRules/Ready_to_engage.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_to_engage</fullName>
    <active>false</active>
    <description>If the lead is in status Ready and the rep wants to move the lead to the Engaging the following fields need to be filled</description>
    <errorConditionFormula>AND(
 NOT( $User.Id = &#39;005EY000000HgBC&#39;),
 ISPICKVAL( Status , &quot;Engaging&quot;), 
OR(
 ISBLANK ( MobilePhone ),
 ISPICKVAL( LeadSource , &quot;&quot;),
 ISBLANK( FirstName )
)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please, complete the following fields to move the Lead to Engaging: Mobile.</errorMessage>
</ValidationRule>