unpackaged/main/default/objects/Lead/validationRules/Reserve.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserve</fullName>
    <active>true</active>
    <description>If the Reserve Box is checked, if the number of Reserved Records in the owner user is bigger than the Number of Reserved limit in the user record</description>
    <errorConditionFormula>AND(

 Reserve__c = TRUE, 
 Owner:User.Reserved_Limit__c =  Owner:User.Reserved_Records__c 

)</errorConditionFormula>
    <errorMessage>You have exceeded the amount of Leads you can reserve. Please, uncheck the &quot;Reserve&quot; box or remove a Lead from your reserved Leads.</errorMessage>
</ValidationRule>