unpackaged/main/default/objects/Lead/validationRules/Sales_User_cant_modify_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_User_cant_modify_owner</fullName>
    <active>true</active>
    <description>Sales User cannot manually move a Lead to a Queue</description>
    <errorConditionFormula>AND(
ISCHANGED( OwnerId ),
$Profile.Name = &quot;Sales User&quot;,
$User.Username &lt;&gt; &quot;edayal@luxurypresence.com&quot;,
LEFT(OwnerId, 3) = &quot;00G&quot;,
Bypass_validation__c = false
)</errorConditionFormula>
    <errorMessage>You can not move the Lead to a Queue, please contact system admin</errorMessage>
</ValidationRule>