unpackaged/main/default/objects/Lead/listViews/AE3_Inbound_Reassigned_Leads_30_90_Days.listView-meta.xml
<ListView>
    <fullName>AE3_Inbound_Reassigned_Leads_30_90_Days</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000EvYOyMAN,00QRg00000EwGndMAF,00QRg00000F4U6vMAF,00QRg00000FEtOzMAL,00QRg00000FGJMDMA5,00QRg00000FIS3dMAH,00QRg00000FWnjJMAT,00QRg00000FVJybMAH,00QRg00000FRuaAMAT,00QRg00000FUq8cMAD,00QRg00000Evs6fMAB,00QRg00000FS069MAD</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000FS7AnMAL,00QRg00000FNVwxMAH,00QRg00000FN5IMMA1,00QRg00000EvO4jMAF,00QRg00000FFQnxMAH,00QRg00000FJPdBMAX,00QRg00000FHpALMA1,00QRg00000FCzYYMA1,00QRg00000FC2QPMA1,00QRg00000FAWu2MAH,00QRg00000F8ZddMAF,00QRg00000F6ik5MAB</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000F4cFmMAJ,00QRg00000F14ovMAB,00QRg00000EvcLOMAZ,00QRg00000F09abMAB,00QRg00000EyHifMAF,00QRg00000EyciHMAR,00QRg00000Ewq9RMAR,00QRg00000EZsNGMA1,00QRg00000EfvlSMAR,00QRg00000ETyKCMA1,00QRg00000EU50cMAD,00QRg00000EP3NgMAL</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000EDCOHMA5,00QRg00000EJiRuMAL,00QRg00000DwPUoMAN,00QRg00000E4baRMAR,00QRg00000DuXzWMAV,00QRg00000DktBhMAJ,00QRg00000DS2fLMAT,00QRg00000EHYN2MAP,00QRg00000EdvpeMAB,00QRg00000EvuXqMAJ,00QRg00000EsvUHMAZ,00QRg00000FCVyfMAH</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000FGwMaMAL,00QRg00000EzDjTMAV,00QRg00000EsiNOMAZ,00QRg00000FL6JVMA1,00QRg00000EeofZMAR,00QRg00000EssOMMAZ,00QRg00000Epx1VMAR,00QRg00000El510MAB,00QRg00000EmmDZMAZ,00QRg00000Ejhj1MAB,00QRg00000EmNp1MAF,00QRg00000EkgCLMAZ</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000EflUMMAZ,00QRg00000EiWiCMAV,00QRg00000EhdAvMAJ,00QRg00000Eh5yrMAB,00QRg00000Eh6q7MAB,00QRg00000EeyPRMAZ,00QRg00000EezpWMAR,00QRg00000EesjpMAB,00QRg00000Eg1J0MAJ,00QRg00000Ed48YMAR,00QRg00000EwHV7MAN,00QRg00000EQHVgMAP</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000ERg6PMAT,00QRg00000Ea7kVMAR,00QRg00000EOUJxMAP,00QRg00000EYSLpMAP,00QRg00000FTsxFMAT,00QRg00000FGbXdMAL,00QRg00000FCI3mMAH,00QRg00000FT9P3MAL,00QRg00000EcbRWMAZ,00QRg00000FaakIMAR,00QRg00000FBQBSMA5,00QRg00000FaqfNMAR</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000FVKmbMAH,00QRg00000EwBjuMAF,00QRg00000FQKVXMA5,00QRg00000FZzsnMAD,00QRg00000FbRDVMA3,00QRg00000FONdzMAH,00QRg00000FP1DCMA1,00QRg00000FIWNNMA5,00QRg00000F4MKhMAN,00QRg00000FYjlHMAT,00QRg00000EwCmAMAV,00QRg00000FNoWZMA1</value>
    </filters>
    <filters>
        <field>Lead_18_Digit_ID__c</field>
        <operation>equals</operation>
        <value>00QRg00000Eu8m5MAB,00QRg00000EwHucMAF,00QRg00000FOLNeMAP</value>
    </filters>
    <label>AE3 Inbound Reassigned Leads 30-90 Days</label>
</ListView>