unpackaged/main/default/objects/Lead/listViews/Agency_NY.listView-meta.xml
<ListView>
    <fullName>Agency_NY</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Prior_12_months_total_transaction_value__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LAST_CALL_DATE</columns>
    <columns>Rep_Assigned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partnership_Organization__c</field>
        <operation>equals</operation>
        <value>The Agency</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>NY</value>
    </filters>
    <label>Agency NY</label>
</ListView>