unpackaged/main/default/objects/Lead/listViews/Amanda_Myers_Coldwell_Banker.listView-meta.xml
<ListView>
    <fullName>Amanda_Myers_Coldwell_Banker</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partnership_Organization__c</field>
        <operation>equals</operation>
        <value>Coldwell Banker Realty,Coldwell Banker Affiliate</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Amanda</value>
    </filters>
    <label>Amanda Myers - Coldwell Banker</label>
</ListView>