unpackaged/main/default/objects/Lead/listViews/Amanda_Myers_Lead_Pool.listView-meta.xml
<ListView>
    <fullName>Amanda_Myers_Lead_Pool</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>ca,fl,co,ny,mn,id,mt</value>
    </filters>
    <filters>
        <field>Average_Listing_Price__c</field>
        <operation>greaterOrEqual</operation>
        <value>500000</value>
    </filters>
    <filters>
        <field>Last_12_months_transactions__c</field>
        <operation>greaterOrEqual</operation>
        <value>13</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Ready</value>
    </filters>
    <label>Amanda Myers Lead Pool</label>
    <queue>General</queue>
</ListView>