unpackaged/main/default/objects/Lead/listViews/Andrew_Richardson_Nov24.listView-meta.xml
<ListView>
    <fullName>Andrew_Richardson_Nov24</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Prior_12_months_total_transaction_value__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LAST_CALL_DATE</columns>
    <columns>Rep_Assigned_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Partnership_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.DO_NOT_CALL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Reserve__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Prior_12_months_total_transaction_value__c</field>
        <operation>greaterOrEqual</operation>
        <value>5000000</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>arich</value>
    </filters>
    <filters>
        <field>Rep_Assigned_Date__c</field>
        <operation>equals</operation>
        <value>11/12/2024 12:00 AM</value>
    </filters>
    <label>Andrew Richardson Nov24</label>
</ListView>