unpackaged/main/default/objects/Lead/listViews/Arman_Akhund_Assigned_MQLs.listView-meta.xml
<ListView>
    <fullName>Arman_Akhund_Assigned_MQLs</fullName>
    <booleanFilter>(1 AND 2 and 4) or (1 AND 3 and 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>LAST_CALL_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Arman</value>
    </filters>
    <filters>
        <field>Paid_Search_Inbound__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Paid_Social_Inbound__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Akhund</value>
    </filters>
    <label>Arman Akhund - Assigned MQLs</label>
</ListView>