unpackaged/main/default/objects/Lead/listViews/Arman_Akhund_Lead_Pool.listView-meta.xml
<ListView>
    <fullName>Arman_Akhund_Lead_Pool</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>az,ca,fl,NC,tx</value>
    </filters>
    <filters>
        <field>Average_Listing_Price__c</field>
        <operation>greaterOrEqual</operation>
        <value>750000</value>
    </filters>
    <filters>
        <field>Last_12_months_transactions__c</field>
        <operation>greaterOrEqual</operation>
        <value>15</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Non-Converted</value>
    </filters>
    <label>Arman Akhund Lead Pool</label>
    <queue>General</queue>
</ListView>