unpackaged/main/default/objects/Lead/listViews/Arman_Nov24_Austin_Denver.listView-meta.xml
<ListView>
    <fullName>Arman_Nov24_Austin_Denver</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Prior_12_months_total_transaction_value__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LAST_CALL_DATE</columns>
    <columns>Rep_Assigned_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.DO_NOT_CALL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Reserve__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Prior_12_months_total_transaction_value__c</field>
        <operation>greaterOrEqual</operation>
        <value>8000000</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Arman</value>
    </filters>
    <filters>
        <field>LEAD.CITY</field>
        <operation>equals</operation>
        <value>Denver,Austin</value>
    </filters>
    <label>Arman Nov24 Austin &amp; Denver</label>
</ListView>