unpackaged/main/default/objects/Lead/listViews/Arman_Sales_Ops_leads.listView-meta.xml
<ListView>
    <fullName>Arman_Sales_Ops_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Prior_12_months_total_transaction_value__c</columns>
    <columns>LAST_CALL_DATE</columns>
    <columns>Lead_Brokerage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prior_12_months_total_transaction_value__c</field>
        <operation>greaterOrEqual</operation>
        <value>5000000</value>
    </filters>
    <filters>
        <field>Prior_12_months_total_transaction_value__c</field>
        <operation>lessOrEqual</operation>
        <value>15000000</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>General</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>General MLS Leads</label>
</ListView>